change portfolio theme

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,10 @@ body {
   @apply box-border bg-neutral-50  text-gray-100;
 }
 .btn-primary {
-  @apply bg-purple-500 font-semibold text-white md:mx-0 mx-auto rounded-full py-3 px-6 flex items-center gap-2;
+  @apply bg-blue-600 font-semibold text-white md:mx-0 mx-auto rounded-full py-3 px-6 flex items-center gap-2;
 }
+
+
 
 .aboutImg::after {
   @apply content-[''] w-full left-0 top-0 rounded-xl rotate-12 h-full absolute bg-gray-600 -z-10;
